# secMLClass

./: README.md
SEAL-master/: SEAL.sln
SEAL-master/native/examples/: BreastCancer.txt  CMakeLists.txt  MultinomialNB_Email.cpp  MultinomialNB_Email.h  NaiveBayesBreastCancer.cpp  NaiveBayesBreastCancer.h  UNSW-testing.txt  randgen.cpp  secMLClass.cpp  weights1.txt
SEAL-master/native/src/seal/util/: locks.h
